# uas-researcher

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  orchestrator.py  pyproject.toml  run_with_cache.py  synthesis.py
.claude/agents/: uas-ai-inference-specialist.md  uas-camera-power-specialist.md  uas-companion-computer-specialist.md  uas-electronics-specialist.md  uas-frame-specialist.md  uas-mavlink-mcp-architect.md  uas-propulsion-specialist.md  uas-rc-telemetry-specialist.md  uas-regulatory-specialist.md  uas-safety-architect.md  uas-sitl-devops-specialist.md  uas-video-systems-specialist.md
.claude/skills/: uas-output-schema.md  uas-previous-findings.md  uas-project-constraints.md
agents/: __init__.py  base.py  specialists.py  team.py
